word-breaking links now to avoid overflow

--- a/softwerkskammer/frontend/less/agora.less
+++ b/softwerkskammer/frontend/less/agora.less
@@ -199,6 +199,10 @@ ul.align-with-table-header {
   overflow: hidden;
 }
 
+a {
+  word-wrap: break-word;
+}
+
 #tag-cloud {
   height: 400px;
   overflow: hidden;
